# project

./: .gitignore  .gitignore-my  README.md
newProject/: CMakeLists.txt  README  log
newProject/lib/: output_facet_0.stl  output_facet_1000.stl  output_facet_10011.stl  output_facet_1002.stl  output_facet_10024.stl  output_facet_10035.stl  output_facet_10047.stl  output_facet_10060.stl  output_facet_10076.stl  output_facet_10079.stl  output_facet_10092.stl  output_facet_10105.stl  output_facet_10115.stl  output_facet_1013.stl  output_facet_10140.stl  output_facet_10145.stl  output_facet_10158.stl  output_facet_10181.stl  output_facet_10184.stl  output_facet_10196.stl  output_facet_10209.stl  output_facet_10211.stl  output_facet_10230.stl  output_facet_10243.stl  output_facet_10248.stl  output_facet_10256.stl  output_facet_10269.stl  output_facet_10280.stl  output_facet_10297.stl  output_facet_10308.stl  output_facet_11009.stl  output_facet_11010.stl  output_facet_11025.stl  output_facet_11042.stl  output_facet_11055.stl  output_facet_11059.stl  output_facet_11074.stl  output_facet_11078.stl  output_facet_11104.stl  (+354 more)
newProject/src/: CMakeLists.txt  DataInput.cpp  DataInput.h  IncLocal.cpp  IncLocal.h  IncTestFunc.cpp  IncTestFunc.h  PointCloud.cpp  PointCloud.h  border.cpp  border.h  border_facet_selection.cpp  border_facet_selection.h  coco.cpp  coco.h  main.cpp  ring_extending_coco.cpp  ring_extending_coco.h  test_incrementalcoco.cpp~  test_incrementalcoco.h  test_ring_extending_coco.cpp  test_ring_extending_coco.h  test_single_coco.cpp  test_single_coco.h
